# libossi

./: LICENSE  meson.build
include/: critical_section.h
include/ossi/: message_queue.h  si_notify.h  sitime.h
include/vmem/: vmem_codec.h
src/: meson.build  vmem_codec.c
src/arch/: meson.build
src/arch/freertos/: critical_section.c  meson.build  message_queue.c  si_notify.c
src/arch/posix/: critical_section.c  meson.build  message_queue.c  sitime.c
src/codec/: miniz.h  ossi_vmem_codec.c  vmem_codec.c
